tests/semantic/read_err2.mtp
(*Read statement with string constant*)
const buf := 'error';
begin
	read(buf);
end.